--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,13 @@ nav {
   animation: fadeDown 0.8s both;
 }
 
+.navMobile {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
 ul {
   display: flex;
   justify-content: center;
@@ -99,8 +106,7 @@ ul li:not(:nth-child(3)) a:hover {
 }
 
 @media (min-width: 767px) {
-  nav .bar,
-  nav .logoMobile {
+  .navMobile {
     display: none;
   }
 }
@@ -109,12 +115,11 @@ ul li:not(:nth-child(3)) a:hover {
   ul {
     position: absolute;
     top: 100%;
-    left: 12px;
   }
 
   nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 20px;
     background-image: url(../images/la\ barre.png);
     background-position: center;
@@ -134,11 +139,11 @@ ul li:not(:nth-child(3)) a:hover {
     font-size: 9px;
   }
 
-  nav .logoMobile {
+  .navMobile .logoMobile {
     width: 55px;
   }
 
-  nav .bar {
+  .navMobile .bar {
     width: 40px;
   }
 }
@@ -346,4 +351,9 @@ ul li:not(:nth-child(3)) a:hover {
 .fadeIn {
   animation: fadeInAnima 0.8s both;
   animation-delay: 0.5s;
+}
+
+.navForMobile {
+  justify-content: center;
+  align-items: center;
 }
